--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test",
+  "name": "YeposVue",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,12 +11,17 @@
     "axios": "^0.19.0",
     "core-js": "^3.4.3",
     "uuid": "^3.3.3",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "mdbvue": "./mdbvue-admin-5.8.3.tgz",
+    "popper.js": "^1.14.7",
+    "vue-drag-drop": "^1.1.4",
+    "vue-router": "^3.0.3",
+    "vue2-google-maps": "^0.10.6"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.1.0",
-    "@vue/cli-plugin-eslint": "^4.1.0",
-    "@vue/cli-service": "^4.1.0",
+    "@vue/cli-plugin-babel": "^4.1.2",
+    "@vue/cli-plugin-eslint": "^4.1.2",
+    "@vue/cli-service": "^4.1.2",
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
