--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^3.4.3",
-    "uuid": "^3.3.3",
-    "vue": "^2.6.10",
+    "laravel-vue-pagination": "^2.3.1",
     "mdbvue": "./mdbvue-admin-5.8.3.tgz",
     "popper.js": "^1.14.7",
+    "uuid": "^3.3.3",
+    "vue": "^2.6.10",
     "vue-drag-drop": "^1.1.4",
     "vue-router": "^3.0.3",
     "vue2-google-maps": "^0.10.6"
